--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/wangeditor@latest/dist/wangEditor.min.js"></script> -->
 
-    <title>旅游小助理</title>
+    <title>ZISU问答小助手</title>
   </head>
   <body>
     <div id="app"></div>
